--- a/config/boards/arm/adv360/adv360_right_defconfig
+++ b/config/boards/arm/adv360/adv360_right_defconfig
@@ -54,3 +54,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_BUILD_OUTPUT_UF2=y
+
+# Battery reporting may be waking macOS up from sleep
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
