--- a/config/boards/arm/adv360/macros.dtsi
+++ b/config/boards/arm/adv360/macros.dtsi
@@ -32,5 +32,5 @@
     compatible = "zmk,behavior-macro";
     label = "macro_kinesis";
     #binding-cells = <0>;
-    bindings = <&kp K>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
+    bindings = <&kp LS(W)>, <&kp H>, <&kp LS(M)>, <&kp COLON>, <&kp LEFT_PARENTHESIS>, <&kp Z>, <&kp EQUAL>, <&kp LS(U)>, <&kp N0>, <&kp AT>, <&kp AT>;
   };
