--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -32,5 +32,5 @@ macro_kinesis: macro_kinesis{
 compatible = "zmk,behavior-macro";
 label = "macro_kinesis";
 #binding-cells = <0>;
-bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
+bindings = <&kp LS(W)>, <&kp H>, <&kp LS(M)>, <&kp COLON>, <&kp LEFT_PARENTHESIS>, <&kp Z>, <&kp EQUAL>, <&kp LS(U)>, <&kp N0>, <&kp AT>, <&kp AT>;
 };
